Fix testimonial alignment

--- a/src/styles/cloudcasa.css
+++ b/src/styles/cloudcasa.css
@@ -437,7 +437,7 @@
 .cloudcasa-testimonial-card > div {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    flex: 1 1 auto;
 }
 
 .cloudcasa-testimonial-quote {
